Final Design fix

--- a/app/index.jade
+++ b/app/index.jade
@@ -14,7 +14,7 @@ html(lang="en")
 
   body(ng-app="homepageApp")
     #cloud-container
-      #backround
+      #background
       .container(ng-view="")
 
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyATcWTTUU8nTH3H9rdARvM0bPHhZV44tBw&sensor=false")
