--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -138,8 +138,9 @@
   .teaser-images-container
     .img_container 
       img(src="../images/illu/mocks.png")
+
 .bottom
   .bottom-content
-    p.text-blue {{ 'FOLLOWUS' | translate }}
-    button.btn.btn-fb
-    button.btn.btn-twt
+    p.text-blue Design and developed by 
+      a.text-white(href="http://easi6.com") easi6
+    a.text-blue.presskit Want to lean more? Download our Presskit!
