--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -135,12 +135,11 @@ p {
       .language {
         width: 114px;
         height: 60px;
-        padding-top: 8px;
+        padding-top: 10px;
         float: left;
         .dropdown {
           a {
             width: 114px;
-            font-size: 1.25em;
             color: #929292;
             background-repeat: no-repeat;
             background-position: right;
@@ -256,7 +255,7 @@ p {
     position: absolute;
     width: 100%;
     height: 423px;
-    margin-top: 70px;
+    margin-top: 95px;
     .popup-area {
       position: relative;
       width: 960px;
@@ -284,14 +283,14 @@ p {
             text-align: center;
           }
           p.name {
-            margin-top: 120px;
+            margin-top: 114px;
             font-size: 20px;
             color: #404040;
           }
           p.message {
             font-size: 15px;
             color: #6e6e6e;
-            margin-top: 4px;
+            margin-top: 10px;
           }
           .bottoms {
             margin-top: 11px;
@@ -569,25 +568,33 @@ p {
 
 .bottom {
   background-color: #404041;
-  height: 60px;
+  width: 100%;
+  height: 70px;
+  position: absolute;
+  left: 0px;
   .bottom-content {
-    width: 260px;
+    position: relative;
     height: 50px;
-    margin: auto;
-    padding: 15px;
+    padding-top: 24px;
     border: 0;
+    font-size: 16px;
     p {
-      font-size: 20px;
-      float: left;
-      padding: 5px;
+      position: absolute;
+      left: 50%;
+      margin-left: -249px;
     }
 
-    button {
-      margin-left: 10px;
+    a.presskit {
+      position: absolute;
+      left: 50%;
+      display: block;
+      padding-left: 10px;
+      border-left: 1px solid #28aae1;
     }
 
-    .btn-fb {
-      margin-right: 5px;
+    a, a:hover, a:visited {
+      text-decoration: none;
+      cursor: pointer;
     }
   }
 }
@@ -597,5 +604,9 @@ p {
 }
 
 .text-blue {
-  color: #27a9e0;
+  color: #28aae1;
+}
+
+.text-white {
+  color: white;
 }
