Tomo popup language pack 적용

--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -277,7 +277,7 @@ p {
             left: 85px;
           }
           p {
-            width: 240px;
+            //width: 240px;
             margin: auto;
             font-weight: 600;
             text-align: center;
