--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -40,32 +40,32 @@
       .popups
         .popup.popup-1(ng-show="show_popups[0]")
           img.profile_img(src="../images/popup/marisa2.png")
-          p.name Marisa
-          p.message Join my riverside run at 6!
+          p.name {{ 'MARISA' | translate }}
+          p.message {{ 'TOMO_EXERCISE' | translate }}
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-2(ng-show="show_popups[1]")
           img.profile_img(src="../images/popup/Nestor.png")
-          p.name Nestor
-          p.message Salsa and beer rock!
+          p.name {{ 'NESTOR' | translate }}
+          p.message {{ 'TOMO_BEER' | translate }}
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-3(ng-show="show_popups[2]")
           img.profile_img(src="../images/popup/jordan2.png")
-          p.name Jordan
-          p.message Let's get some sushi around 7!
+          p.name {{ 'JORDAN' | translate }}
+          p.message {{ 'TOMO_EAT' | translate }}
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-4(ng-show="show_popups[3]")
           img.profile_img(src="../images/popup/Kyeongsik.png")
-          p.name Kyeongsik
-          p.message Need somebody to talk to.
+          p.name {{ 'KYEONGSIK' | translate }}
+          p.message {{ 'TOMO_DATE_1' | translate }}
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-5(ng-show="show_popups[4]")
           img.profile_img(src="../images/popup/Momo.png")
-          p.name Momo
-          p.message Officially single!
+          p.name {{ 'MOMO' | translate }}
+          p.message {{ 'TOMO_DATE_2' | translate }}
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
     .tomos-area
