Social link 추가, screen height 800 넘을 때 보정값 추가

--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -15,8 +15,8 @@
             a.menu_link(ng-click="gotoPage(4)") {{ 'SHARE' | translate }}
       .social
         .btns
-          button.btn.btn-fb
-          button.btn.btn-twt
+          a.btn.btn-fb(href="https://www.facebook.com/tomoniapp")
+          a.btn.btn-twt(href="https://twitter.com/tomoniapp")
       .language
         .dropdown
           a.dropdown-toggle english
