--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,7 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="description", content="")
-    meta(name="viewport", content="width=device-width")
+    meta(name="viewport", content="width=960, height=800")
     <!-- build:css styles/main.css -->
     link(rel="stylesheet", href="styles/main.css")
     link(rel="stylesheet", href="styles/page.css")
