--- a/app/index.jade
+++ b/app/index.jade
@@ -35,8 +35,7 @@ html(lang="en")
     script(src="bower_components/angular-route/angular-route.js")
     <!-- endbuild -->
 
-    <!-- bulid:js scripts/application.js -->
+    <!-- build:js scripts/application.js -->
     script(src="scripts/app.js")
     script(src="scripts/controllers/main.js")
-    //script(src="scripts/templates.js")
     <!-- endbuild -->
