Gruntfile build 실섭에 맞게 수정. 언어팩 한글 통일성 추가

--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,8 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="description", content="")
-    meta(name="viewport", content="width=960, height=800")
+    meta(name="viewport", content="width=960, height=800")	
+    meta
     <!-- build:css styles/main.css -->
     link(rel="stylesheet", href="styles/main.css")
     link(rel="stylesheet", href="styles/page.css")
@@ -20,6 +21,8 @@ html(lang="en")
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyATcWTTUU8nTH3H9rdARvM0bPHhZV44tBw&sensor=false")
     script(src="bower_components/jquery/jquery.js")
     script(src="bower_components/angular/angular.js")
+    script
+
 
     <!-- build:js scripts/plugins.js -->
     script(src="bower_components/sass-bootstrap/js/dropdown.js")
@@ -27,6 +30,8 @@ html(lang="en")
     script(src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js")
     script(src="bower_components/angular-ui-bootstrap/src/dropdownToggle/dropdownToggle.js")
     <!-- endbuild -->
+    script
+
 
     <!-- build:js scripts/modules.js -->
     script(src="bower_components/angular-resource/angular-resource.js")
