--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -143,4 +143,4 @@
   .bottom-content
     p.text-blue Design and developed by 
       a.text-white(href="http://easi6.com") easi6
-    a.text-blue.presskit Want to lean more? Download our Presskit!
+    a.text-blue.presskit(href="{{presskitURL}}") Want to lean more? Download our Presskit!
