--- a/app/index.jade
+++ b/app/index.jade
@@ -6,7 +6,8 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="description", content="")
     meta(name="viewport", content="width=960, height=800")	
-    meta(property="og:title", content="Tomoni Teaaser Page")	
+    meta(property="og:url", content="http://tomoniapp.com")	
+    meta(property="og:title", content="Tomoni Teaser Page")	
     meta(property="og:image", content="http://tomoniapp.com/images/tomoni_logo_blue.png")	
     meta(property="og:description", content="Welcome to Tōmōni, the first activity-based discovery app!")	
     meta
