--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -77,7 +77,7 @@ p {
   width: 100%;
   background-color: #ffffff;
   height: 60px;
-  border-bottom: 1px solid #828282;
+  border-bottom: 1px solid #d2d2d2;
   font-weight: 400;
   font-size: 1.25em;
   z-index: 999;
