--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -293,6 +293,7 @@ p {
             margin-top: 10px;
           }
           .bottoms {
+            cursor: pointer;
             margin-top: 11px;
             width: 100%;
             height: 55px;
