--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -42,31 +42,31 @@
           img.profile_img(src="../images/popup/marisa2.png")
           p.name {{ 'MARISA' | translate }}
           p.message {{ 'TOMO_EXERCISE' | translate }}
-          .bottoms
+          .bottoms(ng-click="goToStoreLink()")
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-2(ng-show="show_popups[1]")
           img.profile_img(src="../images/popup/Nestor.png")
           p.name {{ 'NESTOR' | translate }}
           p.message {{ 'TOMO_BEER' | translate }}
-          .bottoms
+          .bottoms(ng-click="goToStoreLink()")
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-3(ng-show="show_popups[2]")
           img.profile_img(src="../images/popup/jordan2.png")
           p.name {{ 'JORDAN' | translate }}
           p.message {{ 'TOMO_EAT' | translate }}
-          .bottoms
+          .bottoms(ng-click="goToStoreLink()")
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-4(ng-show="show_popups[3]")
           img.profile_img(src="../images/popup/Kyeongsik.png")
           p.name {{ 'KYEONGSIK' | translate }}
           p.message {{ 'TOMO_DATE_1' | translate }}
-          .bottoms
+          .bottoms(ng-click="goToStoreLink()")
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-5(ng-show="show_popups[4]")
           img.profile_img(src="../images/popup/Momo.png")
           p.name {{ 'MOMO' | translate }}
           p.message {{ 'TOMO_DATE_2' | translate }}
-          .bottoms
+          .bottoms(ng-click="goToStoreLink()")
             p.notice {{ 'COMINGSOON' | translate }}
     .tomos-area
       ul.tomos
